docs/api/qiskit/0.19/qiskit.aqua.algorithms.QuantumAlgorithm.md
---
title: QuantumAlgorithm
description: API reference for qiskit.aqua.algorithms.QuantumAlgorithm
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.QuantumAlgorithm
---

# QuantumAlgorithm

<span id="qiskit.aqua.algorithms.QuantumAlgorithm" />

`QuantumAlgorithm(quantum_instance)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/quantum_algorithm.py "view source code")

Base class for Quantum Algorithms.

This method should initialize the module and use an exception if a component of the module is available.

## Attributes

### backend

<span id="qiskit.aqua.algorithms.QuantumAlgorithm.backend" />

`qiskit.providers.basebackend.BaseBackend`

Returns backend.

**Return type**

[`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend")

### quantum\_instance

<span id="qiskit.aqua.algorithms.QuantumAlgorithm.quantum_instance" />

`Union[None, qiskit.aqua.quantum_instance.QuantumInstance]`

Returns quantum instance.

**Return type**

`Optional`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance")]

### random

Return a numpy random.

## Methods

### run

<span id="qiskit.aqua.algorithms.QuantumAlgorithm.run" />

`QuantumAlgorithm.run(quantum_instance=None, **kwargs)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/quantum_algorithm.py "view source code")

Execute the algorithm with selected backend.

**Parameters**

*   **quantum\_instance** (`Union`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance"), [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend"), `None`]) – the experimental setting.
*   **kwargs** (*dict*) – kwargs

**Returns**

results of an algorithm.

**Return type**

dict

**Raises**

[**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If a quantum instance or backend has not been provided

### set\_backend

<span id="qiskit.aqua.algorithms.QuantumAlgorithm.set_backend" />

`QuantumAlgorithm.set_backend(backend, **kwargs)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/quantum_algorithm.py "view source code")

Sets backend with configuration.

**Return type**

`None`

