docs/api/qiskit/0.24/qiskit.aqua.algorithms.QuantumAlgorithm.md
---
title: QuantumAlgorithm
description: API reference for qiskit.aqua.algorithms.QuantumAlgorithm
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.QuantumAlgorithm
---

<span id="qiskit-aqua-algorithms-quantumalgorithm" />

# qiskit.aqua.algorithms.QuantumAlgorithm

<span id="qiskit.aqua.algorithms.QuantumAlgorithm" />

`QuantumAlgorithm(quantum_instance)`[GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/algorithms/quantum_algorithm.py "view source code")

Base class for Quantum Algorithms.

This method should initialize the module and use an exception if a component of the module is available.

### \_\_init\_\_

<span id="qiskit.aqua.algorithms.QuantumAlgorithm.__init__" />

`abstract __init__(quantum_instance)`

Initialize self. See help(type(self)) for accurate signature.

## Methods

|                                                                                                                                                  |                                              |
| ------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------- |
| [`__init__`](#qiskit.aqua.algorithms.QuantumAlgorithm.__init__ "qiskit.aqua.algorithms.QuantumAlgorithm.__init__")(quantum\_instance)            | Initialize self.                             |
| [`run`](#qiskit.aqua.algorithms.QuantumAlgorithm.run "qiskit.aqua.algorithms.QuantumAlgorithm.run")(\[quantum\_instance])                        | Execute the algorithm with selected backend. |
| [`set_backend`](#qiskit.aqua.algorithms.QuantumAlgorithm.set_backend "qiskit.aqua.algorithms.QuantumAlgorithm.set_backend")(backend, \*\*kwargs) | Sets backend with configuration.             |

## Attributes

|                                                                                                                                            |                           |
| ------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------- |
| [`backend`](#qiskit.aqua.algorithms.QuantumAlgorithm.backend "qiskit.aqua.algorithms.QuantumAlgorithm.backend")                            | Returns backend.          |
| [`quantum_instance`](#qiskit.aqua.algorithms.QuantumAlgorithm.quantum_instance "qiskit.aqua.algorithms.QuantumAlgorithm.quantum_instance") | Returns quantum instance. |
| [`random`](#qiskit.aqua.algorithms.QuantumAlgorithm.random "qiskit.aqua.algorithms.QuantumAlgorithm.random")                               | Return a numpy random.    |

### backend

<span id="qiskit.aqua.algorithms.QuantumAlgorithm.backend" />

`property backend`

Returns backend.

**Return type**

`Union`\[`Backend`, `BaseBackend`]

### quantum\_instance

<span id="qiskit.aqua.algorithms.QuantumAlgorithm.quantum_instance" />

`property quantum_instance`

Returns quantum instance.

**Return type**

`Optional`\[`QuantumInstance`]

### random

<span id="qiskit.aqua.algorithms.QuantumAlgorithm.random" />

`property random`

Return a numpy random.

### run

<span id="qiskit.aqua.algorithms.QuantumAlgorithm.run" />

`run(quantum_instance=None, **kwargs)`

Execute the algorithm with selected backend.

**Parameters**

*   **quantum\_instance** (`Union`\[`QuantumInstance`, `Backend`, `BaseBackend`, `None`]) – the experimental setting.
*   **kwargs** (*dict*) – kwargs

**Returns**

results of an algorithm.

**Return type**

dict

**Raises**

[**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If a quantum instance or backend has not been provided

### set\_backend

<span id="qiskit.aqua.algorithms.QuantumAlgorithm.set_backend" />

`set_backend(backend, **kwargs)`

Sets backend with configuration.

**Return type**

`None`

